syntax="proto3";
package balancer;

option java_package="ru.otus.api";
option java_multiple_files=true;

message RegisterNodeRequest {
  uint32 port = 1;
  string address = 2;
}

message RegisterNodeReply {
  bool status = 1;
}

message HelloRequest {
  string requestId = 1;
}

message HelloResponse {
  string requestId = 1;
}

service LoadBalancer {
  rpc registerNode(RegisterNodeRequest) returns (RegisterNodeReply) {}
  rpc helloRequest(HelloRequest) returns (HelloResponse) {}
}

service Node {
  rpc helloRequest(HelloRequest) returns (HelloResponse) {}
}
